[gd_scene load_steps=11 format=3 uid="uid://uum3afi8p8j8"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_llbat"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/xr/start_xr.gd" id="3_2u1ks"]
[ext_resource type="PackedScene" uid="uid://c5fs3wg04qq8k" path="res://assets/concert_hall/scene.gltf" id="3_tkou7"]
[ext_resource type="PackedScene" uid="uid://b6178bbte6uol" path="res://ui/UITest.tscn" id="4_r1ayy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lce4a"]
size = Vector3(10, 1, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_givjw"]
albedo_color = Color(0.682353, 0.552941, 0.160784, 1)

[sub_resource type="BoxMesh" id="BoxMesh_s6sep"]
material = SubResource("StandardMaterial3D_givjw")
size = Vector3(10, 1, 10)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6n1jh"]

[sub_resource type="Sky" id="Sky_t2npr"]
sky_material = SubResource("ProceduralSkyMaterial_6n1jh")

[sub_resource type="Environment" id="Environment_5sxlu"]
background_mode = 2
sky = SubResource("Sky_t2npr")

[node name="Menu" type="Node3D"]
script = ExtResource("1_llbat")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_lce4a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
mesh = SubResource("BoxMesh_s6sep")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5sxlu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.931056, 0.315993, -0.182438, 0, 0.5, 0.866025, 0.364877, -0.806318, 0.465528, -1.8, 5.90541, 1.59)
shadow_enabled = true
directional_shadow_mode = 0

[node name="ServerIP" type="LineEdit" parent="."]
process_mode = 4
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Enter IP Address Here if Joining"
alignment = 1

[node name="Host" type="Button" parent="."]
process_mode = 4
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 44.0
offset_bottom = 15.5
grow_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="."]
process_mode = 4
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Join
"

[node name="XRToolsStartXR" type="Node" parent="."]
script = ExtResource("3_2u1ks")

[node name="OSG_Scene" parent="." instance=ExtResource("3_tkou7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1528.41, 0.54, 1689.58)

[node name="UITest" parent="." instance=ExtResource("4_r1ayy")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.221011, 1.08157, -0.669122)

[connection signal="text_submitted" from="ServerIP" to="." method="_on_server_ip_text_submitted"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="host_pressed" from="UITest" to="." method="_on_ui_test_host_pressed"]
[connection signal="join_pressed" from="UITest" to="." method="_on_ui_test_join_pressed"]
